error.log
Error running Simple Unit Test 'P2_MattLyons_26_UnitNotStatic.zip':
\\dist113\dhs_stud\DHSStudent14\141lyonsm\My Documents\NetBeansProjects\Java-Grader\downloads\P2_MattLyons_26_UnitNotStatic\P2_MattLyons_25_UnitTestTest\UnitTest2.java:1: error: class UnitTest1 is public, should be declared in a file named UnitTest1.java
public class UnitTest1{
       ^
1 error

Error running Simple Unit Test 'P2_MattLyons_27_UnitPrivate.zip':
\\dist113\dhs_stud\DHSStudent14\141lyonsm\My Documents\NetBeansProjects\Java-Grader\downloads\P2_MattLyons_27_UnitPrivate\UnitTest3.java:1: error: class UnitTest1 is public, should be declared in a file named UnitTest1.java
public class UnitTest1{
       ^
1 error

